[gd_scene load_steps=4 format=3 uid="uid://drqacql86p5sg"]

[ext_resource type="Script" path="res://UI.gd" id="1_mp4sc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ng0vd"]
bg_color = Color(0.545098, 0.117647, 0.152941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymhv3"]
bg_color = Color(0.180392, 0.698039, 0.509804, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mp4sc")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 24.0
offset_right = 26.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.957747, 0.921739)

[node name="LifesLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Lifes: 3"

[node name="GameLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ng0vd")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 2
offset_right = 308.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label2" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "OHHH NOOO."
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label2" type="Label" parent="GameLostContainer/Panel/VBoxContainer2"]
layout_mode = 2
text = "YOU LOST!"
horizontal_alignment = 1

[node name="GameLostButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer2/Label2"]
layout_mode = 2
offset_top = 33.0
offset_right = 300.0
offset_bottom = 64.0
text = "RESTART
"

[node name="GameLostButton3" type="Button" parent="GameLostContainer/Panel/VBoxContainer2/Label2"]
layout_mode = 2
offset_top = 69.0
offset_right = 300.0
offset_bottom = 100.0
text = "EXIT
"

[node name="LevelWonContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelWonContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ymhv3")

[node name="VBoxContainer2" type="VBoxContainer" parent="LevelWonContainer/Panel"]
layout_mode = 2
offset_left = 101.0
offset_top = 84.0
offset_right = 199.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LevelWonContainer/Panel/VBoxContainer2"]
layout_mode = 2
text = "YOU WON!"
horizontal_alignment = 1

[node name="LevelWonButton" type="Button" parent="LevelWonContainer/Panel/VBoxContainer2"]
layout_mode = 2
text = "NEXT LEVEL"

[node name="LevelWonButton2" type="Button" parent="LevelWonContainer/Panel/VBoxContainer2"]
layout_mode = 2
text = "RESTART
"

[node name="LevelWonButton3" type="Button" parent="LevelWonContainer/Panel/VBoxContainer2"]
layout_mode = 2
text = "QUIT
"

[node name="VBoxContainer" type="VBoxContainer" parent="LevelWonContainer/Panel"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.0
offset_top = 26.0
offset_right = 101.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_font_sizes/font_size = 40
text = "GOOD JOB."
horizontal_alignment = 1

[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer2/Label2/GameLostButton" to="." method="_on_game_lost_button_2_pressed"]
[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer2/Label2/GameLostButton" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer2/Label2/GameLostButton3" to="." method="_on_game_lost_button_3_pressed"]
[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer2/LevelWonButton" to="." method="_on_level_won_button_pressed"]
[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer2/LevelWonButton2" to="." method="_on_level_won_button_2_pressed"]
[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer2/LevelWonButton3" to="." method="_on_level_won_button_3_pressed"]
